feat(Authentication): Added Auth0 authentication section

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -21,3 +21,49 @@
   align-items: center;
   justify-content: center;
 }
+
+.google-button {
+  
+  color: #FFFFFF;
+  font-family: 'Black';
+  background-color: #EAEAEA;
+  font-weight: 500;
+  border-radius: 4px;
+  font-size: 14px;
+  padding: 5px;
+  padding-bottom: 2.5px;
+  margin-right: 2px;
+  margin-bottom: 2px;
+}
+
+.google-button:hover {
+  background-color: #424242;
+}
+
+.google-button:focus {
+  background-color: #424242;
+  outline: 2px solid #CCCCCC;
+  border: 4px solid #CCCCCC;
+}
+
+.google-button:focus:hover {
+  background-color: #424242;
+}
+
+.dark .google-button {
+  background-color: #424242;
+}
+
+.dark .google-button:hover {
+  background-color: #424242;
+}
+
+.dark .google-button:focus {
+  background-color: #424242;
+  outline: 2px solid #CCCCCC;
+  border: 4px solid #CCCCCC;
+}
+
+.dark .google-button:focus:hover {
+  background-color: #424242;
+}
