--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -23,9 +23,9 @@
 }
 
 .link {
-  color: white;
+  color: var(--ifm-color-primary-lightest);
 }
 
 .link:hover {
-  color: white;
+  color: var(--ifm-color-primary-lightest);
 }
