--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -23,9 +23,11 @@
 }
 
 .link {
+  font-size: 18px;
   color: var(--ifm-color-primary-lightest);
 }
 
 .link:hover {
+  font-size: 18px;
   color: var(--ifm-color-primary-lightest);
 }
