--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -9,36 +9,33 @@
 @import "tailwindcss/utilities";
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #9e9e9e;
-  --ifm-color-primary-dark: #808080;
-  --ifm-color-primary-darker: #666666;
-  --ifm-color-primary-darkest: #4d4d4d;
-  --ifm-color-primary-light: #bcbcbc;
-  --ifm-color-primary-lighter: #cccccc;
-  --ifm-color-primary-lightest: #ececec;
-  --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  background: #020617;
+  --ifm-color-primary: #3578e5; /*#25c2a0;*/
+  --ifm-color-primary-dark: #1d68e1; /*rgb(33, 175, 144);*/
+  --ifm-color-primary-darker: #1b62d4; /*rgb(31, 165, 136);*/
+  --ifm-color-primary-darkest: #1751af; /*rgb(26, 136, 112);*/
+  --ifm-color-primary-light: #4e89e8; /*rgb(70, 203, 174);*/
+  --ifm-color-primary-lighter: #5a91ea; /*rgb(102, 212, 189);*/
+  --ifm-color-primary-lightest: #80aaef; /*rgb(146, 224, 208);*/
+  --ifm-code-font-size: 90%; /*95%;*/
 }
 
-[data-theme="dark"] {
-  --ifm-color-primary: #9e9e9e;
-  --ifm-color-primary-dark: #808080;
-  --ifm-color-primary-darker: #666666;
-  --ifm-color-primary-darkest: #4d4d4d;
-  --ifm-color-primary-light: #bcbcbc;
-  --ifm-color-primary-lighter: #cccccc;
-  --ifm-color-primary-lightest: #4d4d4d;
+.navbar {
+  background-color: black;
 }
 
-.dark .subscribe-button {
-  background-color: #706363;
-  color: black;
+.footer {
+  background-color: black;
 }
 
-.subscribe-button {
-  background-color: #e0bcbc;
-  color: black;
+pre code {
+  background-color: black;
+  border: none;
+  font-size: 100%;
+  line-height: inherit;
+  padding: 0;
 }
+/* 
 
 .google-button {
   color: #ffffff;
@@ -67,20 +64,20 @@
   background-color: #424242;
 }
 
-.dark .google-button {
+.google-button {
   background-color: #424242;
 }
 
-.dark .google-button:hover {
+.google-button:hover {
   background-color: #424242;
 }
 
-.dark .google-button:focus {
+.google-button:focus {
   background-color: #424242;
   outline: 2px solid #cccccc;
   border: 4px solid #cccccc;
 }
 
-.dark .google-button:focus:hover {
+.google-button:focus:hover {
   background-color: #424242;
-}
+} */
